services/client/.devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullstack-pilot-client
  namespace: fullstack-pilot
  labels:
    app: fullstack-pilot-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fullstack-pilot-client
  template:
    metadata:
      labels:
        app: fullstack-pilot-client
    spec:
      containers:
        - name: client
          image: ghcr.io/koydas/fullstack-pilot/client:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
